fix: center align dismiss button in alert component

--- a/resources/assets/css/widgets/alert.scss
+++ b/resources/assets/css/widgets/alert.scss
@@ -40,6 +40,7 @@
 
     .pj-alert-dismiss {
         flex-shrink: 0;
+        align-self: center;
         background: none;
         border: none;
         cursor: pointer;
